Atualizando  tela cliente e adicionando a pasta pages

--- a/velocity/src/main/webapp/home.xhtml
+++ b/velocity/src/main/webapp/home.xhtml
@@ -77,8 +77,12 @@
                     <h:form>
                         <p:panelMenu>
                             <p:submenu label="Cadastro">
-                                <p:menuitem value="Usuários" outcome="/usuarios/cadastro" icon="ui-icon-triangle-1-e" />
-                                <p:menuitem value="Clientes" outcome="/clientes/lista" icon="ui-icon-triangle-1-e"/>
+                                <p:menuitem value="Usuários" outcome="/pages/usuarios/cadastro" icon="ui-icon-triangle-1-e" />
+                                <p:menuitem value="Clientes" outcome="/pages/clientes/lista" icon="ui-icon-triangle-1-e"/>
+                                <p:menuitem value="Endereço" outcome="/pages/endereco/lista" icon="ui-icon-triangle-1-e"/>
+                                <p:menuitem value="Emil" outcome="/pages/endereco/lista" icon="ui-icon-triangle-1-e"/>
+                                <p:menuitem value="Telefone" outcome="/pages/telefone/lista" icon="ui-icon-triangle-1-e"/>
+                                <p:menuitem value="Habilitação" outcome="/pages/habilitacao/lista" icon="ui-icon-triangle-1-e"/>
                                  <p:menuitem value="Fornecedores" url="#" icon="ui-icon-triangle-1-e"/>
                                   <p:menuitem value="Veiculos" url="#" icon="ui-icon-triangle-1-e"/>
                                    <p:menuitem value="Funcionarios" url="#" icon="ui-icon-triangle-1-e"/>
