--- a/velocity/src/main/webapp/pages/accessNegado.xhtml
+++ b/velocity/src/main/webapp/pages/accessNegado.xhtml
@@ -3,12 +3,12 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:h="http://xmlns.jcp.org/jsf/html">
     <h:head>
-        <title>Facelet Title</title>
+        <title>Velocity</title>
     </h:head>
     <h:body>
-        Hello from Facelets
-        <br />
-        <h:link outcome="welcomePrimefaces" value="Primefaces welcome page" />
+        <div style="margin: 0 auto; text-align: center;">
+            <h1>Acesso Negado</h1>
+        </div>
     </h:body>
 </html>
 
