--- a/velocity/src/main/webapp/pages/clientes/lista.xhtml
+++ b/velocity/src/main/webapp/pages/clientes/lista.xhtml
@@ -2,7 +2,7 @@
 <!DOCTYPE composition PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <ui:composition xmlns="http://www.w3.org/1999/xhtml"
                 xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
-                template="./../../home.xhtml"
+                template="./../home.xhtml"
                 xmlns:h="http://xmlns.jcp.org/jsf/html"
                 xmlns:f="http://xmlns.jcp.org/jsf/core"
                 xmlns:p="http://primefaces.org/ui">
@@ -285,12 +285,19 @@
                         </f:facet>
                         <h:outputText value="#{item.observacao}"/>
                     </p:column>
+                     <p:column width="100">
+                        <f:facet name="header">
+                            <h:outputText value="Endereço"/>
+                        </f:facet>
+                        <p:commandButton value="" icon="ui-icon-plus" styleClass="botaoIcon" actionListener="#{clienteBean.urlEndereco(item.documentoFk.idDocumentos)}" />
+                    </p:column>
                     <p:column width="100">
                         <f:facet name="header">
                             <h:outputText value="Habilitação"/>
                         </f:facet>
                          <p:commandButton value="" icon="ui-icon-plus" styleClass="botaoIcon" actionListener="#{clienteBean.urlHabilitacao(item.documentoFk.idDocumentos)}" />
                     </p:column>
+                   
                     <p:column width="100">
                         <f:facet name="header">
                             <h:outputText value="Ação"/>
