adicionando CADASTRO CADMODELOVEICULO

--- a/velocity/src/main/webapp/pages/home.xhtml
+++ b/velocity/src/main/webapp/pages/home.xhtml
@@ -7,7 +7,7 @@
       xmlns:p="http://primefaces.org/ui">
     <h:head>
         <meta content='text/html; charset=UTF-8' http-equiv="Content-Type"/>
-        <title>LocaLeader</title>
+        <title>Velocity</title>
         <style type="text/css">
             .ui-layout-north {
                 z-index:1!important;
@@ -89,7 +89,7 @@
                                 <p:menuitem value="Telefone" outcome="/pages/telefone/lista" icon="ui-icon-triangle-1-e"/>
                                 <p:menuitem value="Habilitação" outcome="/pages/habilitacao/lista" icon="ui-icon-triangle-1-e"/>
                                 <p:menuitem value="Fornecedores" url="#" icon="ui-icon-triangle-1-e"/>
-                                <p:menuitem value="Veiculos" url="#" icon="ui-icon-triangle-1-e"/>
+                                <p:menuitem value="Veículos" outcome="/pages/veiculos/controle" icon="ui-icon-triangle-1-e"/>
                                 <p:menuitem value="Funcionarios" url="#" icon="ui-icon-triangle-1-e"/>
 
 
