--- a/velocity/src/main/webapp/pages/home.xhtml
+++ b/velocity/src/main/webapp/pages/home.xhtml
@@ -85,7 +85,7 @@
                                 <p:menuitem value="Usuários" outcome="/pages/usuarios/cadastro" icon="ui-icon-triangle-1-e" />
                                 <p:menuitem value="Clientes" outcome="/pages/clientes/lista" icon="ui-icon-triangle-1-e"/>
                                 <p:menuitem value="Endereço" outcome="/pages/endereco/lista" icon="ui-icon-triangle-1-e"/>
-                                <p:menuitem value="Emil" outcome="/pages/endereco/lista" icon="ui-icon-triangle-1-e"/>
+                                <p:menuitem value="Email" outcome="/pages/email/lista" icon="ui-icon-triangle-1-e"/>
                                 <p:menuitem value="Telefone" outcome="/pages/telefone/lista" icon="ui-icon-triangle-1-e"/>
                                 <p:menuitem value="Habilitação" outcome="/pages/habilitacao/lista" icon="ui-icon-triangle-1-e"/>
                                 <p:menuitem value="Fornecedores" url="#" icon="ui-icon-triangle-1-e"/>
