update projeto implementação de cadastro de imagem

--- a/velocity/src/main/webapp/pages/fornecedor/controle.xhtml
+++ b/velocity/src/main/webapp/pages/fornecedor/controle.xhtml
@@ -16,12 +16,10 @@
         <div style="margin: 0 auto; text-align: center;">
             <p:graphicImage library="img" name="logo.png" width="300" height="200" style="border-radius: 5%;"/>
            <br />
-           <p:graphicImage library="img" name="acessonegado.jpg"  width="300"/>
+           <p:graphicImage library="img" name="construcao.png"  width="300"/>
             <br />
             <p:linkButton outcome="/pages/home.xhtml" value="Voltar Pagina Incial" style="width: 300px" icon="ui-icon-arrowreturnthick-1-w"/>
-            <h:form>
-                 <p:commandButton style="float: right" value="Sair" ajax="false"  action="#{usuarioController.logOut()}" />
-            </h:form>
+         
         </div>
     </h:body>
 </html>
