--- a/velocity/src/main/webapp/login.xhtml
+++ b/velocity/src/main/webapp/login.xhtml
@@ -1,4 +1,5 @@
-<!DOCTYPE HTML>
+<?xml version='1.0' encoding='UTF-8' ?>
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:h="http://xmlns.jcp.org/jsf/html"
       xmlns:p="http://primefaces.org/ui"
@@ -12,28 +13,28 @@
             </f:facet>
 
         </h:head>
-        <h:body style="background: #cc0000;">
-            <p:panel style="margin: 0 auto; text-align: center; width: 270px;  margin-top: 10%;
-                     border-radius: 10px; font-size: 30px; padding: 5px; background: #000033;">
-
+        <h:body>
+            <div style="margin: 0 auto; text-align: center; margin-top: 50px; box-shadow: #000033 0px 0px 10px; width: 350px; border-radius: 5%;">
+                <p:graphicImage library="img" name="logo.png" width="250" height="250"  style="margin-top: 10px;"/>
+            
                 <h:form>
-                    <h:panelGrid columns="1" style="text-align: left!important">
-                        <p:messages autoUpdate="true" showDetail="true"  style="font-size: 20px; color: #cc0000; text-transform: capitalize;"/>
+                    <h:panelGrid columns="1" style="margin: 0 auto; text-align: center; font-size: 20px;">
+                        <p:messages showDetail="true"  style="font-size: 15px; color: #cc0000; text-transform: capitalize;">
+                            <p:autoUpdate />
+                        </p:messages>
                         <h:panelGrid columns="1">
-                            <p:outputLabel for="login" value="Login" style="color: #ffffff" />
+                            <p:outputLabel for="login" value="Login" />
                             <p:inputText  value="#{loginBean.login}" type="text" rendered="true"
-                                          requiredMessage="Login não pode ser em branco." id="login"
-                                          style="width: 250px; height: 30px;"/> 
-                            <p:outputLabel value="Senha:" for="senha" style="color: #ffffff"/>
-                            <p:password value="#{loginBean.password}" id="senha" style="width: 250px; height: 30px;"/>
-                            <p:commandButton value="Entrar" action="#{loginBean.entrar()}" 
-                                             style="padding: 5px; float: right; font-size: 30px;" />
+                                          requiredMessage="Login não pode ser em branco." id="login"  style="width: 300px;"/> 
+                            <p:outputLabel value="Senha:" for="senha"/>
+                            <p:password value="#{loginBean.password}" id="senha" style="width: 300px;"/>
+                            <br />
+                            <p:commandButton value="Entrar" action="#{loginBean.entrar()}"  icon="ui-icon-power" iconPos="true" style="width: 300px;"/>
                         </h:panelGrid>
 
                     </h:panelGrid>
                 </h:form>
-
-            </p:panel>
+                </div>
         </h:body>
     </f:view>    
 </html>
