--- a/velocity/src/main/webapp/pages/clientes/lista.xhtml
+++ b/velocity/src/main/webapp/pages/clientes/lista.xhtml
@@ -10,7 +10,9 @@
     <ui:define name="conteudo">
 
         <h:form>
-            <p:messages autoUpdate="true" showDetail="true" closable="true" />
+            <p:messages showDetail="true" closable="true">
+                <p:autoUpdate />
+            </p:messages>
         </h:form>
         <h3>
             Dados Do Cliente
@@ -22,7 +24,9 @@
                 <p:dialog header="Dados" widgetVar="dlgClientes" showEffect="explode" hideEffect="fade"
                           style="margin-top:130px!important; max-height: 80%!important; z-index: 2!important;
                           overflow: auto!important ">
-                    <p:messages autoUpdate="true" showDetail="true" closable="true" />
+                    <p:messages showDetail="true" closable="true" >
+                        <p:autoUpdate />
+                    </p:messages>
                     <h:panelGrid columns="3">
                         <h:panelGrid columns="1">
                             <p:outputLabel value="Nome:" for="nome" />
@@ -309,6 +313,9 @@
                             <h:outputText value="Imagem"/>
                         </f:facet>
                         <p:commandButton value="" icon="ui-icon-image" styleClass="botaoIcon" actionListener="#{clienteBean.exibirImagem(item.idCliente,'cliente')}" title="foto" />
+                        <p:commandButton value="" icon="ui-icon-plus" styleClass="botaoIcon" actionListener="#{clienteBean.urlImagem(item.idCliente)}" title="Nova" />
+                        <p:commandButton value="" icon="ui-icon-pencil" styleClass="botaoIcon" actionListener="#{clienteBean.urlEditaImagem(item.idCliente)}" title="Editar" />
+                      
                     </p:column>
                     <p:column width="100">
                         <f:facet name="header">
