--- a/velocity/src/main/webapp/pages/endereco/lista.xhtml
+++ b/velocity/src/main/webapp/pages/endereco/lista.xhtml
@@ -10,13 +10,15 @@
     <ui:define name="conteudo">
         <f:view>
             <h:form id="formEndereco">
-                <p:messages autoUpdate="true" showDetail="true" />
+                <p:messages showDetail="true" >
+                    <p:autoUpdate />
+                </p:messages>
                 <p:dataTable value="#{cadEnderecoBean.listaEnderecos}" var="item">
                     <f:facet name="header">
-                          <div>
-                        <p>Lista de Endereços</p>
-                        <p:commandButton style="float: right; margin: 5px; margin-top: -50px;" value="Novo" icon="ui-icon-plus"  actionListener="#{cadEnderecoBean.setaEnderecos()}"/>
-                          </div>
+                        <div>
+                            <p>Lista de Endereços</p>
+                            <p:commandButton style="float: right; margin: 5px; margin-top: -50px;" value="Novo" icon="ui-icon-plus"  actionListener="#{cadEnderecoBean.setaEnderecos()}"/>
+                        </div>
                     </f:facet>
                     <p:column sortBy="#{item.documentoFk.pessoaFk.nome}" filterBy="#{item.documentoFk.pessoaFk.nome}">
                         <f:facet name="header">
@@ -98,7 +100,9 @@
                 <p:dialog header="Dados" widgetVar="dlghab" showEffect="explode" hideEffect="fade"
                           style="margin-top:130px!important; max-height: 100%!important; z-index: 2!important;" visible="#{cadEnderecoBean.documentos.idDocumentos != null}">
                     <p:panelGrid columns="1">
-                        <p:messages autoUpdate="true" />
+                        <p:messages >
+                            <p:autoUpdate />
+                        </p:messages>
                         <p:outputLabel value="Nome do Cliente : #{cadEnderecoBean.documentos.pessoaFk.nome}" />
                     </p:panelGrid>
                     <h:panelGrid columns="3">
@@ -106,7 +110,7 @@
                             <p:outputLabel value="Endereço" for="logradouro" />
                             <p:inputText id="logradouro" value="#{cadEnderecoBean.cadEndereco.logradouro}" title="Logradouro" required="true" requiredMessage="The Logradouro field is required."/>
                         </h:panelGrid>
-                         <h:panelGrid columns="1">
+                        <h:panelGrid columns="1">
                             <p:outputLabel value="Numero:" for="numero" />
                             <p:inputText id="numero" value="#{cadEnderecoBean.cadEndereco.numero}" title="Numero" required="true" requiredMessage="The Numero field is required."/>
                         </h:panelGrid>
@@ -122,7 +126,7 @@
                             <p:outputLabel value="Cidade:" for="cidade" />
                             <p:inputText id="cidade" value="#{cadEnderecoBean.cadEndereco.cidade}" title="Cidade" required="true" requiredMessage="The Cidade field is required."/>
                         </h:panelGrid>
-                         <h:panelGrid columns="1">
+                        <h:panelGrid columns="1">
                             <p:outputLabel value="Cep:" for="cep" />
                             <p:inputText id="cep" value="#{cadEnderecoBean.cadEndereco.cep}" title="Cep" required="true" requiredMessage="The Cep field is required."/>
                         </h:panelGrid>
@@ -152,7 +156,9 @@
 
                     <h:panelGrid columns="1">
 
-                        <p:messages autoUpdate="true" />
+                        <p:messages >
+                            <p:autoUpdate />
+                        </p:messages>
                         <p:outputLabel value="Clientes" for="clien_tes" />
                         <p:selectOneMenu id="clien_tes" value="#{cadEnderecoBean.idDocumento}">
                             <f:selectItem itemLabel="Selecione" itemValue="" noSelectionOption="true" />
