--- a/velocity/src/main/webapp/pages/imagens/contoleImagensClientes.xhtml
+++ b/velocity/src/main/webapp/pages/imagens/contoleImagensClientes.xhtml
@@ -19,6 +19,7 @@
         <f:view>
             <h:form id="frm1" enctype="multipart/form-data" >
                 <h:panelGrid columns="1">
+                    <p:graphicImage value="#{cadImagemBean.buscarImagem(cadImagemBean.imagensAux.nomeImagem)}" width="150" height="150" rendered="#{cadImagemBean.imagensAux.idImagem != null}"/>
                     <h:panelGrid columns="1">
                         <p:outputLabel for="advanced" value="Clientes" />
                         <p:selectOneMenu id="advanced" value="#{cadImagemBean.idCliente}" panelStyle="width:180px"
@@ -28,29 +29,7 @@
 
                         </p:selectOneMenu>
                     </h:panelGrid>
-                    <h:panelGrid columns="1">
-                        <p:outputLabel for="usu" value="Usuários" />
-                        <p:selectOneMenu id="usu" value="#{cadImagemBean.idUsuario}" panelStyle="width:180px" style="width:160px">
-                            <f:selectItem itemLabel="Selecione" itemValue="" noSelectionOption="true" />
-                            <f:selectItems value="#{cadImagemBean.listaUsuario}" var="user" itemLabel="#{user.login}" itemValue="#{user.idUsuario}" />
-
-                        </p:selectOneMenu>
-                    </h:panelGrid>
-                    <h:panelGrid columns="1">
-                        <p:outputLabel for="cli" value="Veiculo" />
-                        <p:selectOneMenu id="cli" value="#{cadImagemBean.idVeiculo}" panelStyle="width:180px" style="width:160px">
-                            <f:selectItem itemLabel="Selecione" itemValue="" noSelectionOption="true" />
-                            <f:selectItems value="#{cadImagemBean.listaVeiculos}" var="veiculo" itemLabel="#{veiculo.modelo}" itemValue="#{veiculo.idModelo}" />
-
-                        </p:selectOneMenu>
-                    </h:panelGrid>
-                    <h:panelGrid columns="1">
-                        <p:outputLabel for="hab" value="Habilitação" />
-                        <p:selectOneMenu id="hab" value="#{cadImagemBean.idHabilitacao}" panelStyle="width:180px" style="width:160px">
-                            <f:selectItem itemLabel="Selecione" itemValue="" noSelectionOption="true" />
-                            <f:selectItems value="#{cadImagemBean.listaHabilitacao}" var="habali" itemLabel="#{habali.documentoFk.pessoaFk.nome}" itemValue="#{habali.idHabilitacao}" />
-                        </p:selectOneMenu>
-                    </h:panelGrid>
+                   
                     <p:fileUpload value="#{cadImagemBean.file}" 
                                   allowTypes="/(\.|\/)(gif|jpe?g|png)$/" 
                                   invalidFileMessage="São permitidas somente imagens (jpeg, jpg e png)"   mode="simple" skinSimple="true"  id="foto" 
